update link to gif

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url("https://vignette.wikia.nocookie.net/nonciclopedia/images/1/1d/Internet_explorer_brucia.gif/revision/latest?cb=20090614064457");
+  background: url("https://i.imgur.com/z3oDOtf.gif");
   background-size: 5%;
   color: lawngreen;
   padding-bottom: 50px;
